--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			Graphic designer and developer based in Toronto, Ontario. Currently enrolled in the graphic design program at Seneca@York. 
 			<br>
 			<br>
-			Site is under construction. Get in touch at <a href="#">info@loic.work</a> or follow me on Instagram <a href="#">@byloic</a>.
+			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="instagram.com/byloic">@byloic</a>.
 		</p>
-		<img class="arena" src="arena.png">
+		<a href="</a>"><img class="arena" src="arena.png"></a>
 		
 	</div>
 
