--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			Graphic designer and developer based in Toronto, Ontario. Currently enrolled in the graphic design program at Seneca@York. 
 			<br>
 			<br>
-			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="instagram.com/byloic">@byloic</a>.
+			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byloic/">@byloic</a>.
 		</p>
-		<a href="</a>"><img class="arena" src="arena.png"></a>
+		<a href="https://www.are.na/loic-kasangu/"><img class="arena" src="arena.png"></a>
 		
 	</div>
 
