--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>loic.work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -10,12 +11,11 @@
 
 	<div class="container">
 		<p>
-			Graphic designer and developer based in Toronto, Ontario. Currently enrolled in the graphic design program at Seneca@York. 
+			Graphic designer and front-end developer based in Toronto, Ontario. Currently enrolled in the GRA program at Seneca@York. 
 			<br>
 			<br>
-			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byloic/">@byloic</a>.
+			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byeloic/">@byeloic</a>.
 		</p>
-		<a href="https://www.are.na/loic-kasangu/"><img class="arena" src="arena.png"></a>
 		
 	</div>
 
