--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<br>
 			<br>
 			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byeloic/">@byeloic</a>.
+			<br>
+			<br>
+			I'm Currently working on a cutom shopify theme for <a href="https://www.ineffableco.com/about">ineffableco.com</a> with Zack Fryer.
 		</p>
 		
 	</div>
