--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byeloic/">@byeloic</a>.
 			<br>
 			<br>
-			I'm Currently working on a cutom shopify theme for <a href="https://www.ineffableco.com/about">ineffableco.com</a> with Zack Fryer.
+			I'm Currently working on a cutom Shopify theme for <a href="https://www.ineffableco.com/about">ineffableco.com</a> with Zack Fryer.
+			<br>
+			<br>
+			#<a href="http://glassios.co">1</a> #<a href="https://sickowens.github.io/GGITS-Concept/">2</a>
 		</p>
 		
 	</div>
