--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 			<br>
 			<br>
 			I'm Currently working on a cutom Shopify theme for <a href="https://www.ineffableco.com/about">ineffableco.com</a> with Zack Fryer.
+			<!-- <br>
+			<br>
+			#<a href="http://glassios.co">1</a> #<a href="https://sickowens.github.io/GGITS-Concept/">2</a> -->
 			<br>
 			<br>
-			#<a href="http://glassios.co">1</a> #<a href="https://sickowens.github.io/GGITS-Concept/">2</a>
 		</p>
 		
 	</div>
+	<img src="projex23.png">
+	<br>
+	<img src="jugger.png">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="scripts/scripts.js"></script>
