--- a/index.html
+++ b/index.html
@@ -10,30 +10,24 @@
 <body>
 
 	<div class="container">
-		<p>
-			Graphic designer and front-end developer based in Toronto, Ontario. Currently enrolled in the GRA program at Seneca@York. 
+		<p class="info">
+			Loic is a graphic designer and front-end web developer based in Toronto, Ontario. 
 			<br>
-			<br>
-			Site is under construction. Get in touch at <a href="mailto:info@loic.work?Subject=INQUIRY">info@loic.work</a> or follow me on Instagram <a href="http://instagram.com/byeloic/">@byeloic</a>.
-			<br>
-			<br>
-			I'm Currently working on a cutom Shopify theme for <a href="https://www.ineffableco.com/about">ineffableco.com</a> with Zack Fryer.
-			<!-- <br>
-			<br>
-			#<a href="http://glassios.co">1</a> #<a href="https://sickowens.github.io/GGITS-Concept/">2</a> -->
-			<br>
-			<br>
+			Portfolio available upon request. Get in touch at <a href="">info@loic.work</a>  or follow me on Instagram <a href="">@byeloic</a>.
 		</p>
+		<div class="links">
+			<div class="links-left">Sites:</div>
+			<div class="links-right">
+				<a href="">Ineffable</a>
+				<br>
+				<a href="">Astrum</a>
+				<br>
+				<a href="">Glass</a>
+			</div>
+		</div>
+
 		
 	</div>
-	<img src="projex23.png">
-	<br>
-	<img src="jugger.png">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="scripts/scripts.js"></script>
-	<script type="text/javascript">
-
 
 	</script>
 </body>
