--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>loic.work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -13,16 +13,16 @@
 		<p class="info">
 			Loic is a graphic designer and front-end web developer based in Toronto, Ontario. 
 			<br>
-			Portfolio available upon request. Get in touch at <a href="">info@loic.work</a>  or follow me on Instagram <a href="">@byeloic</a>.
+			Portfolio available upon request. Get in touch at <a href="mailto:builtbyloic@gmail.com">info@loic.work</a>  or follow me on Instagram <a href="https://www.instagram.com/byeloic/">@byeloic</a>.
 		</p>
 		<div class="links">
 			<div class="links-left">Sites: </div>
 			<div class="links-right">
-				<a href="">Ineffable</a>
+				<a href="https://ineffableco.com/">Ineffable</a>
 				<br>
-				<a href="">Astrum</a>
+				<a href="#">Astrum</a>
 				<br>
-				<a href="">Glass</a>
+				<a href="http://glassios.co/">Glass</a>
 			</div>
 		</div>
 
