--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div class="container">
 		<p class="info">
-			Loic is a graphic designer and front-end web developer based in Toronto, Ontario. 
+			Lo&iuml;c is a graphic designer and front-end web developer based in Toronto, Ontario. 
 			<br>
 			Portfolio available upon request. Get in touch at <a href="mailto:builtbyloic@gmail.com">info@loic.work</a>  or follow me on Instagram <a href="https://www.instagram.com/byeloic/">@byeloic</a>.
 		</p>
