--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<div class="links">
 			<div class="links-left">Sites: </div>
 			<div class="links-right">
-				<a href="https://ineffableco.com/">Ineffable</a>
+				<a href="#">Ineffable</a>
 				<br>
 				<a href="#">Astrum</a>
 				<br>
-				<a href="http://glassios.co/">Glass</a>
+				<a href="#">Glass</a>
 			</div>
 		</div>
 
