--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <head>
 	<title>loic.work</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="favicon.png/" type="image/png">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
 	<div class="container">
 
-		<p>This site is under contruction :)</p>
+		<ul>
+
+			<li>
+				<div class="project-number">
+					1
+				</div>
+				<span class="project-title">
+					<a href="https://astrum-house.com">astrum-house.com</a>
+				</span>
+			</li>
+
+			<li>
+				<div class="project-number">
+					2
+				</div>
+				<span class="project-title">
+					<a href="https://loso.nyc">loso.nyc</a>
+				</span>
+			</li>
+
+		</ul>
 		
 	</div>
+
+	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="scripts/okhover.min.js"></script>
+	<script>
 
 	</script>
 </body>
