--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>loic.work</title>
+	<title>20000</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.png/" type="image/png">
@@ -13,27 +13,7 @@
 
 	<div class="container">
 
-		<ul>
-
-			<li>
-				<div class="project-number">
-					1
-				</div>
-				<span class="project-title">
-					<a href="https://astrum-house.com">astrum-house.com</a>
-				</span>
-			</li>
-
-			<li>
-				<div class="project-number">
-					2
-				</div>
-				<span class="project-title">
-					<a href="https://loso.nyc">loso.nyc</a>
-				</span>
-			</li>
-
-		</ul>
+		
 		
 	</div>
 
